--- a/SimplePagos/.classpath
+++ b/SimplePagos/.classpath
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 12 [12]"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 12 [12]">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="dist/lib/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="dist/lib/jxl.jar"/>
-	<classpathentry kind="lib" path="dist/lib/mysql-connector-java-5.1.23-bin.jar"/>
-	<classpathentry kind="lib" path="dist/SimplePagos.jar"/>
 	<classpathentry kind="lib" path="jxl.jar"/>
 	<classpathentry kind="lib" path="librerias usadas en este proyecto/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="librerias usadas en este proyecto/jxl.jar"/>
+	<classpathentry kind="lib" path="dist/lib/mysql-connector-java-5.1.48-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
